<resources>
    <string name="app_name">P04-RevisionNotes</string>
    <string name="revision_note">Revision Note</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="show_list">Show List</string>
    <string name="insert">Insert</string>
    <string name="title_activity_main">MainActivity - Insert</string>
    <string name="title_activity_second">SecondActivity - Select</string>
</resources>
